--- a/PetProject++/src/main/resources/templates/mascotaPerdida.hbs
+++ b/PetProject++/src/main/resources/templates/mascotaPerdida.hbs
@@ -54,18 +54,18 @@
                     <div class="row">
                         <div class="col-6">
                             <label for="" class="form-label "> Nombre</label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" name="nombre">
                             <label for="" class="form-label "> Apellido</label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" name="apellido">
                             <label for="Fecha" class="form-label ">Fecha de nacimiento</label>
-                            <input type="date" class="form-control">
+                            <input type="date" class="form-control" name="fechaNacimiento">
                         </div>
                         <div class="col-6">
                             <label for="" class="form-label "> Tipo de Documento</label>
-                            <select name="dni" id="" class="form-select">
-                                <option value="dni">Dni</option>
-                                <option value="dni">Dni</option>
-                                <option value="dni">Dni</option>
+                            <select name="tipoDocumento" id="" class="form-select">
+                                <option value="DNI">DNI</option>
+                                <option value="PASAPORTE">Pasaporte</option>
+                                <option value="PRECARIA">Precaria</option>
                             </select>
                             <label for="" class="form-label mt-2 "> Numero</label>
                             <input type="text" class="form-control">
@@ -83,14 +83,14 @@
                             <input type="text " class="form-control" placeholder="ej:12345678">
                             <label for="Fecha" class="form-label ">Preferencia de contacto</label>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="Hembra">
-                                <label class="form-check-label" for="flexRadioDefault1">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="PrefTelefono">
+                                <label class="form-check-label" for="PrefTelefono">
                                   telefono
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="Macho" checked>
-                                <label class="form-check-label" for="flexRadioDefault2">
+                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="PrefMail" checked>
+                                <label class="form-check-label" for="PrefMail">
                                   mail
                                 </label>
                             </div>
@@ -100,11 +100,19 @@
                     <div class="row border-top border-secondary">
                         <div class="col-12 ">
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-4">
                                     <label for="" class="form-label ">Especie</label>
-                                    <select class="form-select">
+                                    <select class="form-select" name="especie">
                                         <option value="PERRO">Perro</option>
                                         <option value="GATO">Gato</option>
+                                    </select>
+                                </div>
+                                <div class="col-4">
+                                    <label for="" class="form-label ">Sexo</label>
+                                    <select class="form-select" name="sexo">
+                                        <option value="null">Desconoce</option>
+                                        <option value="MACHO">Macho</option>
+                                        <option value="HEMBRA">Hembra</option>
                                     </select>
                                 </div>
                             </div>
@@ -120,57 +128,36 @@
                                 </div>
                             </div>
                             <br>
-                            <div class="row">
-                                <label for="" class="form-label">Sexo</label>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="Hembra" checked>
-                                    <label class="form-check-label" for="flexRadioDefault1">
-                                      Hembra
-                                    </label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="Macho">
-                                    <label class="form-check-label" for="flexRadioDefault2">
-                                      Macho
-                                    </label>
-                                </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="Desconoce" >
-                                    <label class="form-check-label" for="flexRadioDefault2">
-                                      Desconoce
-                                    </label>
-                                </div>
-                            </div>
                             <br>
                             <div class="row">
                                 <label for="" class="form-label">Caracteristicas</label>
                                 <div class="form-check mt-2">
-                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                    <label class="form-check-label" for="flexCheckDefault">
+                                    <input class="form-check-input" type="checkbox" value="" id="Tranquilo">
+                                    <label class="form-check-label" for="Tranquilo">
                                       Tranquilo
                                     </label>
                                 </div>
                                 <div class="form-check mt-2">
-                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                    <label class="form-check-label" for="flexCheckDefault">
+                                    <input class="form-check-input" type="checkbox" value="" id="Pacifico">
+                                    <label class="form-check-label" for="Pacifico">
                                       Pacifico
                                     </label>
                                 </div>
                                 <div class="form-check mt-2">
-                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                    <label class="form-check-label" for="flexCheckDefault">
+                                    <input class="form-check-input" type="checkbox" value="" id="Manso">
+                                    <label class="form-check-label" for="Manso">
                                       Manso
                                     </label>
                                 </div>
                                 <div class="form-check mt-2">
-                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                    <label class="form-check-label" for="flexCheckDefault">
+                                    <input class="form-check-input" type="checkbox" value="" id="Delgado">
+                                    <label class="form-check-label" for="Delgado">
                                       Delgado
                                     </label>
                                 </div>
                                 <div class="form-check mt-2">
-                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                    <label class="form-check-label" for="flexCheckDefault">
+                                    <input class="form-check-input" type="checkbox" value="" id="Amistoso">
+                                    <label class="form-check-label" for="Amistoso">
                                       Amistoso
                                     </label>
                                 </div>
