--- a/PetProject++/src/main/resources/templates/mascotaPerdida.hbs
+++ b/PetProject++/src/main/resources/templates/mascotaPerdida.hbs
@@ -53,46 +53,148 @@
                 <form action="">
                     <div class="row">
                         <div class="col-6">
-                            <label for="" class="form-label "> Nombre</label>
-                            <input type="text" class="form-control" name="nombre">
-                            <label for="" class="form-label "> Apellido</label>
-                            <input type="text" class="form-control" name="apellido">
-                            <label for="Fecha" class="form-label ">Fecha de nacimiento</label>
-                            <input type="date" class="form-control" name="fechaNacimiento">
+                            <label for="nombre" class="form-label "> Nombre</label>
+                            <input type="text" class="form-control" name="nombre" id="nombre">
+                            <label for="apellido" class="form-label "> Apellido</label>
+                            <input type="text" class="form-control" name="apellido" id="apellido">
+                            <label for="fechaNacimiento" class="form-label ">Fecha de Nacimiento</label>
+                            <input type="date" class="form-control" name="fechaNacimiento" id="fechaNacimiento">
                         </div>
                         <div class="col-6">
-                            <label for="" class="form-label "> Tipo de Documento</label>
-                            <select name="tipoDocumento" id="" class="form-select">
+                            <label for="tipoDocumento" class="form-label "> Tipo de Documento</label>
+                            <select name="tipoDocumento" id="tipoDocumento" class="form-select">
                                 <option value="DNI">DNI</option>
                                 <option value="PASAPORTE">Pasaporte</option>
                                 <option value="PRECARIA">Precaria</option>
                             </select>
-                            <label for="" class="form-label mt-2 "> Numero</label>
-                            <input type="text" class="form-control">
-                            <label for="" class="form-label "> Direccion</label>
-                            <input type="text" class="form-control">
+                            <label for="nroDocumento" class="form-label mt-2 "> Numero de Documento</label>
+                            <input type="text" class="form-control" name="nroDocumento" id="nroDocumento">
                         </div>
                     </div>
                     <h3 class="mt-4">Datos de Contacto</h3>
                     <div class="row border-top border-secondary">
+                        <div class="row mt-3">
+                            <div class="col-6">
 
-                        <div class="col-12 ">
-                            <label for="exampleFormControlInput1 " class="form-label ">Email </label>
-                            <input type="email " class="form-control " id="exampleFormControlInput1 " placeholder="nombre@ejemplo.com ">
-                            <label for=" " class="form-label "> Telefono</label>
-                            <input type="text " class="form-control" placeholder="ej:12345678">
-                            <label for="Fecha" class="form-label ">Preferencia de contacto</label>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="PrefTelefono">
-                                <label class="form-check-label" for="PrefTelefono">
-                                  telefono
-                                </label>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <label for="calle" class="form-label">Calle</label>
+                                    </div>
+                                    <div class="col-6">
+                                        <input type="text" class="form-control" name="direccion.calle">
+                                    </div>
+
+                                </div>
+
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="PrefMail" checked>
-                                <label class="form-check-label" for="PrefMail">
-                                  mail
-                                </label>
+                            <div class="col-6">
+
+                                <div class="row">
+                                    <div class="col-6">
+                                        <label for="calle" class="form-label">Numero</label>
+                                    </div>
+                                    <div class="col-6">
+                                        <input type="text" class="form-control" name="direccion.numero">
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-6">
+
+                                <div class="row">
+                                    <div class="col-6">
+                                        <label for="calle" class="form-label">Departamento, Municipio o Comuna</label>
+                                    </div>
+                                    <div class="col-6">
+                                        <input type="text" class="form-control" name="direccion.departamento">
+                                    </div>
+
+                                </div>
+
+                            </div>
+                            <div class="col-6">
+
+                                <div class="row">
+                                    <div class="col-6">
+                                        <label for="calle" class="form-label">Codigo postal</label>
+                                    </div>
+                                    <div class="col-6">
+                                        <input type="text" class="form-control" name="direccion.codigoPostal">
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-6">
+
+                                <div class="row">
+                                    <div class="col-6">
+                                        <label for="calle" class="form-label">Ciudad</label>
+                                    </div>
+                                    <div class="col-6">
+                                        <input type="text" class="form-control" name="direccion.ciudad.nombre">
+                                    </div>
+
+                                </div>
+
+                            </div>
+                            <div class="col-6">
+
+                                <div class="row">
+                                    <div class="col-6">
+                                        <label for="calle" class="form-label">Provincia</label>
+                                    </div>
+                                    <div class="col-6">
+                                        <select name="direccion.ciudad.provincia.id" id="" class="form-select">
+                                            <option value="none" selected disabled hidden>
+                                                Select an Option
+                                            </option>
+                                            {{#each provincias}}
+                                                <option value="{{id}}">{{nombre}}</option>
+                                            {{/each}}
+                                        </select>
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-12">
+                                <div class="row ">
+                                    <div class="col-3">
+                                        <label for="" class="form-label">
+                                            Telefono*
+                                        </label>
+                                    </div>
+                                    <div class="col-9">
+                                        <input type="text" class="form-control" name="contacto.celular">
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="row mt-3">
+                            <div class="col-12">
+                                <div class="row ">
+                                    <div class="col-3">
+                                        <label for="" class="form-label">
+                                            Correo*
+                                        </label>
+                                    </div>
+                                    <div class="col-9">
+                                        <input type="text" class="form-control" placeholder="Ejemplo@gmail.com" name="contacto.mail">
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -124,39 +226,38 @@
                                 </div>
                                 <div class="col-3">
                                     <label for="" class="form-label "> ID Mascota</label>
-                                    <input type="text" class="form-control">
+                                    <input type="text" class="form-control" name="mascota">
                                 </div>
                             </div>
-                            <br>
                             <br>
                             <div class="row">
                                 <label for="" class="form-label">Caracteristicas</label>
                                 <div class="form-check mt-2">
-                                    <input class="form-check-input" type="checkbox" value="" id="Tranquilo">
+                                    <input class="form-check-input" type="checkbox" value="Tranquilo" name="caracteristicasHogares" id="Tranquilo">
                                     <label class="form-check-label" for="Tranquilo">
                                       Tranquilo
                                     </label>
                                 </div>
                                 <div class="form-check mt-2">
-                                    <input class="form-check-input" type="checkbox" value="" id="Pacifico">
+                                    <input class="form-check-input" type="checkbox" value="Pacífico" name="caracteristicasHogares" id="Pacifico">
                                     <label class="form-check-label" for="Pacifico">
                                       Pacifico
                                     </label>
                                 </div>
                                 <div class="form-check mt-2">
-                                    <input class="form-check-input" type="checkbox" value="" id="Manso">
+                                    <input class="form-check-input" type="checkbox" value="Manso" name="caracteristicasHogares" id="Manso">
                                     <label class="form-check-label" for="Manso">
                                       Manso
                                     </label>
                                 </div>
                                 <div class="form-check mt-2">
-                                    <input class="form-check-input" type="checkbox" value="" id="Delgado">
+                                    <input class="form-check-input" type="checkbox" value="Delgado" name="caracteristicasHogares" id="Delgado">
                                     <label class="form-check-label" for="Delgado">
                                       Delgado
                                     </label>
                                 </div>
                                 <div class="form-check mt-2">
-                                    <input class="form-check-input" type="checkbox" value="" id="Amistoso">
+                                    <input class="form-check-input" type="checkbox" value="Amistoso" name="caracteristicasHogares" id="Amistoso">
                                     <label class="form-check-label" for="Amistoso">
                                       Amistoso
                                     </label>
@@ -165,15 +266,19 @@
                             <br>
                             <div class="row">
                                 <h3>Caracteristicas especificas</h3>
-                                <label for="" class="form-label">Raza</label>
-                                <input type="text" class="form-control">
-                                <label for="" class="form-label">Color Principal</label>
-                                <input type="text" class="form-control">
-                                <label for="" class="form-label">Color Secundario</label>
-                                <input type="text" class="form-control">
-                                <label for="" class="form-label">Patrondistintivo</label>
-                                <input type="text" class="form-control">
-
+                                {{#each caracteristicas}}
+                                    <label for="" class="form-label">{{descripcion}}</label>
+                                    {{#if opciones}}
+                                        <select class="form-select" name="sexo">
+                                            <option value="null">Desconoce</option>
+                                        {{#each opciones}}
+                                            <option value="{{valor}}">{{valor}}</option>
+                                        {{/each}}
+                                        </select>
+                                    {{else}}
+                                        <input type="text" class="form-control">
+                                    {{/if}}
+                                {{/each}}
                             </div>
                             <br>
                             <label for=" " class="form-label "> Descripcion de la mascota</label>
