--- a/PetProject++/src/main/resources/templates/mascotaPerdida.hbs
+++ b/PetProject++/src/main/resources/templates/mascotaPerdida.hbs
@@ -56,7 +56,7 @@
         <h1>Mascota Perdida</h1>
         <div class="row mt-4">
             <div class="col-12">
-                <form action="../forms/mascotaPerdida" method="post" class="border-top border-2 border-dark" id='form'>
+                <form action="../forms/mascotaPerdida" method="post" class="border-top border-2 border-dark" enctype="multipart/form-data" id="form">
                     <h3 class="mt-4">Datos de Personales</h3>
                     <div class="row">
                         <div class="col-6">
@@ -229,7 +229,7 @@
                             <div class="row">
                                 <div class="col-9">
                                     <label for="" class="form-label">Agregar Imagen</label>
-                                    <input type="file" class="form-control">
+                                    <input type="file" class="form-control" name="imagen" accept=".png, .jpg">
                                 </div>
                                 <div class="col-3">
                                     <label for="" class="form-label "> ID Mascota</label>
