--- a/PetProject++/src/main/resources/templates/dar-en-adopcion.hbs
+++ b/PetProject++/src/main/resources/templates/dar-en-adopcion.hbs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/registrarMascota.css">
-    <script src="js/formulario-quiero-adoptar.js"></script>
+    <script src="../js/formulario-quiero-adoptar.js"></script>
     <script src="https://kit.fontawesome.com/7fcb757e78.js" crossorigin="anonymous"></script>
     <title>Diseño de sistemas</title>
 </head>
@@ -21,11 +21,11 @@
     <!-- ENCABEZADO -->
     <!--========================================================== -->
     <nav class="navbar navbar-expand-lg navbar-light p-3" id="menu" style="background-image: url('img/banner.PNG');  height: 110px">
-        <a class="navbar-brand" rel="home" href="#">
+        <a class="navbar-brand" rel="home" href="../Inicio">
             <img style="max-width:100px;" src="./img/Logo/negro2.png">
         </a>
         <div class="container">
-            <a class="navbar-brand" href="./index.html">
+            <a class="navbar-brand" href="../Inicio">
                 <span class="fs-5 text-dark fw-bold">Rescate De Patitas</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,10 +51,16 @@
             <div class="col-12">
                 <form action="">
                     <div class="row">
-                        <div class="col-12">
+                        <div class="col-12 mb-4">
                             <h5 for="" class="form-label ">¿Ha encontrado la mascota en la calle?</h5>
-                            <textarea name="" id="" class="form-control"></textarea>
+                            <textarea name="¿Ha encontrado la mascota en la calle?" id="" class="form-control"></textarea>
                         </div>
+                        {{#each preguntasDarEnAdopcion}}
+                        <div class="col-12 mb-4">
+                            <h5 for="" class="form-label ">{{pregunta}}</h5>
+                            <textarea name="{{pregunta}}" id="" class="form-control"></textarea>
+                        </div>
+                        {{/each}}
                     </div>
                     <div class="row">
                         <div class="col-9"></div>
