--- a/PetProject++/src/main/resources/templates/dar-en-adopcion.hbs
+++ b/PetProject++/src/main/resources/templates/dar-en-adopcion.hbs
@@ -9,8 +9,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/registrarMascota.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/registrarMascota.css">
     <script src="../js/formulario-quiero-adoptar.js"></script>
     <script src="https://kit.fontawesome.com/7fcb757e78.js" crossorigin="anonymous"></script>
     <title>Diseño de sistemas</title>
@@ -20,9 +20,9 @@
     <!--========================================================== -->
     <!-- ENCABEZADO -->
     <!--========================================================== -->
-    <nav class="navbar navbar-expand-lg navbar-light p-3" id="menu" style="background-image: url('img/banner.PNG');  height: 110px">
+    <nav class="navbar navbar-expand-lg navbar-light p-3" id="menu" style="background-image: url('../img/banner.PNG');  height: 110px">
         <a class="navbar-brand" rel="home" href="../Inicio">
-            <img style="max-width:100px;" src="./img/Logo/negro2.png">
+            <img style="max-width:100px;" src="../img/Logo/negro2.png">
         </a>
         <div class="container">
             <a class="navbar-brand" href="../Inicio">
@@ -34,16 +34,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#seccion-contacto">Sistema</a>
+                        <a class="nav-link" aria-current="page" href="../Mascotas-Encontradas">Mascotas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../Inicio#intro">Sistema</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../Inicio#seccion-contacto">Contactos</a>
                     </li>
                 </ul>
-                <a href="perfil.html" class="nav-item nav-link" aria-expanded="false"><img src="img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
+                <a href="../Inicio#intro" class="nav-item nav-link" aria-expanded="false"><img src="../img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
             </div>
         </div>
     </nav>
     </header>
     <div class="volver">
-        <a href="" class="volver"><i class="fas fa-angle-double-left"></i>volver </a>
+        <a href="../Inicio" class="volver"><i class="fas fa-angle-double-left"></i>volver </a>
     </div>
     <main class="container">
         <h1>Dar mascota en adopcion</h1>
@@ -74,7 +80,7 @@
             </div>
         </div>
     </main>
-    <script src="js/bootstrap.bundle.min.js "></script>
+    <script src="../js/bootstrap.bundle.min.js "></script>
 </body>
 
 </html>
