--- a/PetProject++/src/main/resources/templates/perfil.hbs
+++ b/PetProject++/src/main/resources/templates/perfil.hbs
@@ -8,33 +8,39 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/main.css">
-    <script src="js/perfil.js"></script>
+    <link rel="stylesheet" href="../css/main.css">
+    <script src="../js/perfil.js"></script>
     <title>Diseño de sistemas</title>
   </head>
   <body>
   <!--========================================================== -->
                         <!-- ENCABEZADO -->
   <!--========================================================== -->
-  <nav class="navbar navbar-expand-lg navbar-light p-3"  id="menu" style="background-image: url('img/banner.PNG');  height: 110px">
-    <a class="navbar-brand" rel="home" href="#">
+  <nav class="navbar navbar-expand-lg navbar-light p-3"  id="menu" style="background-image: url('../img/banner.PNG');  height: 110px">
+    <a class="navbar-brand" rel="home" href="../Inicio">
       <img style="max-width:100px;"
-          src="./img/Logo/negro2.png">
+          src="../img/Logo/negro2.png">
     </a>
     <div class="container">
-      <a class="navbar-brand" href="./index.html">
+      <a class="navbar-brand" href="../Inicio">
           <span class="fs-5 text-dark fw-bold">Rescate De Patitas</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="#seccion-contacto">Sistema</a>
-          </li>
-        </ul>
-        <a href="perfil.hbs"class="nav-item nav-link" aria-expanded="false"><img src="img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="../Mascotas-Encontradas">Mascotas</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="../Inicio#intro">Sistema</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="../Inicio#seccion-contacto">Contactos</a>
+              </li>
+          </ul>
+        <a href="perfil.hbs"class="nav-item nav-link" aria-expanded="false"><img src="../img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
       </div>
     </div>
   </nav>
@@ -49,7 +55,7 @@
                   <div class="card">
                     <div class="card-body">
                       <div class="d-flex flex-column align-items-center text-center">
-                        <img src="img/Avatar/avatar-gato.png" alt="Usuario" class="rounded-circle" width="150">
+                        <img src="../img/Avatar/avatar-gato.png" alt="Usuario" class="rounded-circle" width="150">
                           <div class="mt-3">
                             <h4>{{usuario.nombre}} {{usuario.apellido}}</h4>
                           </div>
@@ -122,7 +128,7 @@
                                         <div class="carousel-item" data-bs-interval="3000">
                                             <div class="card">
                                                 <img
-                                                        src="./img/TomHanks/Amelie.jpg"
+                                                        src="../img/TomHanks/Amelie.jpg"
                                                         class="card-img-top"
                                                         alt="..."
                                                         height="300"
@@ -147,7 +153,7 @@
                                   <div class="carousel-item active" data-bs-interval="3000">
                                       <div class="card">
                                           <img
-                                                  src="./img/TomHanks/Pantufla.jpg!d"
+                                                  src="../img/TomHanks/Pantufla.jpg!d"
                                                   class="card-img-top"
                                                   alt="..."
                                                   height="300"
@@ -165,7 +171,7 @@
                                   <div class="carousel-item" data-bs-interval="3000">
                                     <div class="card">
                                         <img
-                                          src="./img/TomHanks/Amelie.jpg"
+                                          src="../img/TomHanks/Amelie.jpg"
                                           class="card-img-top"
                                           alt="..."
                                           height="300"
@@ -211,9 +217,9 @@
   </div>
 </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <!--<script src="./js/main.js"></script>-->
-    <script src="js/bootstrap.bundle.min.js "></script>
+    <script src="../js/bootstrap.bundle.min.js "></script>
   </body>
 </html>
