--- a/PetProject++/src/main/resources/templates/menu.html
+++ b/PetProject++/src/main/resources/templates/menu.html
@@ -10,6 +10,6 @@
 <form th:action="@{/logout}" method="post"> <!-- lleva al log out de la aplicacion , esto lo pone spring security automatico-->
   <input type="submit" value="Cerrar Sesion"/>
 </form>
-<h1><a th:href="@{/admin}"> pantallaAdmin</a> | <a th:href="@{/user}"> perfil</a></h1>
+<h1><a th:href="@{/admin}"> pantallaAdmin</a> | <a th:href="@{/user}"> Perfil</a></h1>
 </body>
 </html>
